added header, used forEach, added task name

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
 <body>
   <main>
 
-    <div class="heading">
+    <header class="heading">
       <h2 class="list-title">Today's To Do</h2>
       <i class="fa-solid fa-rotate reload-icon icon"></i>
-    </div>
+    </header>
     <hr>
     
     <!-- Input -->
